src/objects/QIRS_Cost__c.object
<CustomObject>
    <description>Object Used to collect Cost log for particular QIRS Object.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category type from Pick list.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category 1 test (r)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2 test (r)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors (r)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework (r)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening (r)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Complementary information about the expense Text  Area field.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIRS__c</fullName>
        <description>Master detail relationship with QIRS Custom object.</description>
        <label>QIRS</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipLabel>Cost</relationshipLabel>
        <relationshipName>Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cost</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Cost-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIRS Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QIRS_Status_Validation_Cost</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( QIRS__r.Status__c , &apos;Closed&apos;) || 
ISPICKVAL( QIRS__r.Status__c , &apos;Submited to Master Approval&apos;) , true, false)</errorConditionFormula>
        <errorMessage>Unable to add Cost as status of QIRS either Closed or Submitted to Master Approval.</errorMessage>
    </validationRules>
</CustomObject>